[package]
name = "zuma_blast"
version = "0.1.0"
authors = ["Yifeng Liu <yifeliu@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = { version = "0.3.22", default-features = false, features = ["fonts", "saving"]}
