[package]
name = "zuma_blast"
version = "0.1.0"
authors = ["Yifeng Liu <laituan1986@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = { version = "0.15.3", features = ["tiles"] }
rand = "0.8.4"
log = "0.4.14"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
